[package]
name = "taylor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
# mexprp = "0.3.1"
strum = { version = "0.24", features = ["derive"] }

[profile.release]
lto=true




